--- a/ambulatory.html
+++ b/ambulatory.html
@@ -147,8 +147,8 @@
         </script>
         <script type="text/javascript"
           src="https://ajax.cloudflare.com/cdn-cgi/scripts/04b3eb47/cloudflare-static/mirage2.min.js"></script>
-        <img data-cfsrc="img/new-logo.png" alt="" style="display:none;visibility:hidden;"><noscript><img
-            src="img/new-logo.png" alt=""></noscript>
+        <img data-cfsrc="img/new-logo.jpg" alt="" style="display:none;visibility:hidden;"><noscript><img
+            src="img/new-logo.jpg" alt=""></noscript>
       </a>
     </div>
     <div id="mobile-menu-wrap"></div>
@@ -193,7 +193,7 @@
         <div class="row">
           <div class="col-lg-2">
             <div class="header__logo">
-              <a href="./index.html"><img data-cfsrc="img/new-logo.png" alt="" style="height: 80px;"></a>
+              <a href="./index.html"><img data-cfsrc="img/new-logo.jpg" alt="" style="height: 80px;"></a>
             </div>
           </div>
           <div class="col-lg-10" style="padding-left: 100px;">
@@ -263,7 +263,7 @@
     <p></p>
     <div><h2>AMBULATORY TRANSPORTATION SERVICES</h2></div>
     <p></p>
-    <img src="./img/new-logo.png" alt="">
+    <img src="./img/new-logo.jpg" alt="">
     <div>Non-emergency ambulatory transportation services play a crucial role in ensuring the efficient and dependable transportation of individuals requiring medical assistance.</div>
     <div>Our team of trained professionals and well-equipped vehicles, dedicated to ambulatory transportation services, ensures that individuals receive the essential care they need during their journey. Through door-to-door service, accommodation of medical equipment, and strict adherence to safety protocols, ambulatory transportation services prioritize the well-being and convenience of those in need.</div>
     <div>For individuals who require assistance while walking, our ambulatory transportation services offer a solution for shopping, and other essential needs. We provide assistance in boarding and disembarking the vehicle and can also stand by or remain on-call as you attend to your responsibilities. </div>
@@ -606,8 +606,8 @@ page when looking at its layout.</p>
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="footer__about">
             <div class="footer__logo">
-              <a href="/index.html"><img data-cfsrc="img/new-logo.png" alt=""
-                  style="display:none;visibility:hidden;"><noscript><img src="img/new-logo.png" alt=""></noscript></a>
+              <a href="/index.html"><img data-cfsrc="img/new-logo.jpg" alt=""
+                  style="display:none;visibility:hidden;"><noscript><img src="img/new-logo.jpg" alt=""></noscript></a>
             </div>
             <p>Our team provides accessible vehicles, serving private individuals, medical institutions, insurance
               entities, nursing homes, and assisted living facilities. With a comprehensive understanding of client
