--- a/bariatric.html
+++ b/bariatric.html
@@ -147,8 +147,8 @@
         </script>
         <script type="text/javascript"
           src="https://ajax.cloudflare.com/cdn-cgi/scripts/04b3eb47/cloudflare-static/mirage2.min.js"></script>
-        <img data-cfsrc="img/new-logo.png" alt="" style="display:none;visibility:hidden;"><noscript><img
-            src="img/new-logo.png" alt=""></noscript>
+        <img data-cfsrc="img/new-logo.jpg" alt="" style="display:none;visibility:hidden;"><noscript><img
+            src="img/new-logo.jpg" alt=""></noscript>
       </a>
     </div>
     <div id="mobile-menu-wrap"></div>
@@ -193,7 +193,7 @@
         <div class="row">
           <div class="col-lg-2">
             <div class="header__logo">
-              <a href="./index.html"><img data-cfsrc="img/new-logo.png" alt="" style="height: 80px;"></a>
+              <a href="./index.html"><img data-cfsrc="img/new-logo.jpg" alt="" style="height: 80px;"></a>
             </div>
           </div>
           <div class="col-lg-10" style="padding-left: 100px;">
@@ -261,7 +261,7 @@
 <div class="row" style="justify-content: center;">
   <div class="col-lg-8">
     <p></p>
-    <img src="./img/new-logo.png" alt="">
+    <img src="./img/new-logo.jpg" alt="">
     <div>OMBI Non-Medical Transportation stands at the forefront as a leading provider of bariatric transportation services. Our specialized bariatric wheelchair transportation services are meticulously crafted to guarantee the safe, comfortable, and convenient travel of individuals with unique needs, whether it's for short or long distances. We prioritize delivering exceptional patient care and go the extra mile to ensure the utmost comfort and safety for our people.</div>
     <div>Our spacious and luxurious transport vehicles offer ample room for individuals, allowing them to stand comfortably inside. There's also sufficient seating for multiple individuals, and we wholeheartedly welcome the person's family and loved ones to accompany them on their journey. The core objective of our bariatric wheelchair transportation services is to ensure that individuals with special needs have reliable and accessible transportation options.</div>
     <div style="height: 200px;">We provide our services for the following purposes: <br>
@@ -609,8 +609,8 @@ page when looking at its layout.</p>
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="footer__about">
             <div class="footer__logo">
-              <a href="/index.html"><img data-cfsrc="img/new-logo.png" alt=""
-                  style="display:none;visibility:hidden;"><noscript><img src="img/new-logo.png" alt=""></noscript></a>
+              <a href="/index.html"><img data-cfsrc="img/new-logo.jpg" alt=""
+                  style="display:none;visibility:hidden;"><noscript><img src="img/new-logo.jpg" alt=""></noscript></a>
             </div>
             <p>Our team provides accessible vehicles, serving private individuals, medical institutions, insurance
               entities, nursing homes, and assisted living facilities. With a comprehensive understanding of client
