--- a/blog.html
+++ b/blog.html
@@ -150,8 +150,8 @@
         </script>
         <script type="text/javascript"
           src="https://ajax.cloudflare.com/cdn-cgi/scripts/04b3eb47/cloudflare-static/mirage2.min.js"></script>
-        <img data-cfsrc="img/new-logo.png" alt="" style="display:none;visibility:hidden;"><noscript><img
-            src="img/new-logo.png" alt=""></noscript>
+        <img data-cfsrc="img/new-logo.jpg" alt="" style="display:none;visibility:hidden;"><noscript><img
+            src="img/new-logo.jpg" alt=""></noscript>
       </a>
     </div>
     <div id="mobile-menu-wrap"></div>
@@ -192,8 +192,8 @@
         <div class="row">
           <div class="col-lg-3">
             <div class="header__logo">
-              <a href="./index.html"><img data-cfsrc="img/new-logo.png" alt=""
-                  style="display:none;visibility:hidden;"><noscript><img src="img/new-logo.png" alt=""></noscript></a>
+              <a href="./index.html"><img data-cfsrc="img/new-logo.jpg" alt=""
+                  style="display:none;visibility:hidden;"><noscript><img src="img/new-logo.jpg" alt=""></noscript></a>
             </div>
           </div>
           <div class="col-lg-7">
@@ -470,8 +470,8 @@
         <div class="col-lg-4 col-md-6">
           <div class="footer__about">
             <div class="footer__logo">
-              <a href="#"><img data-cfsrc="img/new-logo.png" alt=""
-                  style="display:none;visibility:hidden;"><noscript><img src="img/new-logo.png" alt=""></noscript></a>
+              <a href="#"><img data-cfsrc="img/new-logo.jpg" alt=""
+                  style="display:none;visibility:hidden;"><noscript><img src="img/new-logo.jpg" alt=""></noscript></a>
             </div>
             <p>Our team provides accessible vehicles, serving private individuals, medical institutions, insurance
               entities, nursing homes, and assisted living facilities. With a comprehensive understanding of client
