--- a/elderly.html
+++ b/elderly.html
@@ -147,8 +147,8 @@
         </script>
         <script type="text/javascript"
           src="https://ajax.cloudflare.com/cdn-cgi/scripts/04b3eb47/cloudflare-static/mirage2.min.js"></script>
-        <img data-cfsrc="img/new-logo.png" alt="" style="display:none;visibility:hidden;"><noscript><img
-            src="img/new-logo.png" alt=""></noscript>
+        <img data-cfsrc="img/new-logo.jpg" alt="" style="display:none;visibility:hidden;"><noscript><img
+            src="img/new-logo.jpg" alt=""></noscript>
       </a>
     </div>
     <div id="mobile-menu-wrap"></div>
@@ -193,7 +193,7 @@
         <div class="row">
           <div class="col-lg-2">
             <div class="header__logo">
-              <a href="./index.html"><img data-cfsrc="img/new-logo.png" alt="" style="height: 80px;"></a>
+              <a href="./index.html"><img data-cfsrc="img/new-logo.jpg" alt="" style="height: 80px;"></a>
             </div>
           </div>
           <div class="col-lg-10" style="padding-left: 100px;">
@@ -264,7 +264,7 @@
     <div style="text-align: center;"><h2>TRANSPORTATION FOR SENIORS</h2></div>
     <div style="text-align: center;"><h2>(ELDERLY)</h2></div>
     <div>Safe and convenient transportation options designed for elderly individuals requiring personal assistance while traveling</div>
-    <img src="./img/new-logo.png" alt="">
+    <img src="./img/new-logo.jpg" alt="">
     <div style="height: 200px;">We offer transportation services, including both wheelchair-accessible and standard options, to assist elderly residents in bot South and South-West Virginia. Our services cater to those who often face challenges when trying to access transportation for: <br>
       <li>Routine medical appointments</li>
       <li>Banking and other essential journeys</li>
@@ -608,8 +608,8 @@ page when looking at its layout.</p>
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="footer__about">
             <div class="footer__logo">
-              <a href="/index.html"><img data-cfsrc="img/new-logo.png" alt=""
-                  style="display:none;visibility:hidden;"><noscript><img src="img/new-logo.png" alt=""></noscript></a>
+              <a href="/index.html"><img data-cfsrc="img/new-logo.jpg" alt=""
+                  style="display:none;visibility:hidden;"><noscript><img src="img/new-logo.jpg" alt=""></noscript></a>
             </div>
             <p>Our team provides accessible vehicles, serving private individuals, medical institutions, insurance
               entities, nursing homes, and assisted living facilities. With a comprehensive understanding of client
