--- a/stretcher.html
+++ b/stretcher.html
@@ -147,8 +147,8 @@
         </script>
         <script type="text/javascript"
           src="https://ajax.cloudflare.com/cdn-cgi/scripts/04b3eb47/cloudflare-static/mirage2.min.js"></script>
-        <img data-cfsrc="img/new-logo.png" alt="" style="display:none;visibility:hidden;"><noscript><img
-            src="img/new-logo.png" alt=""></noscript>
+        <img data-cfsrc="img/new-logo.jpg" alt="" style="display:none;visibility:hidden;"><noscript><img
+            src="img/new-logo.jpg" alt=""></noscript>
       </a>
     </div>
     <div id="mobile-menu-wrap"></div>
@@ -193,7 +193,7 @@
         <div class="row">
           <div class="col-lg-2">
             <div class="header__logo">
-              <a href="./index.html"><img data-cfsrc="img/new-logo.png" alt="" style="height: 80px;"></a>
+              <a href="./index.html"><img data-cfsrc="img/new-logo.jpg" alt="" style="height: 80px;"></a>
             </div>
           </div>
           <div class="col-lg-10" style="padding-left: 100px;">
@@ -263,7 +263,7 @@
     <p></p>
     <div style="text-align: center;"><h2>NUMBER ONE STRETCHER/GURNEY TRANSPORTATION SERVICE IN SOUTH AND SOUTHWEST VIRGINIA</h2></div>
     <div><h4>WE ARE TOP RATED PROVIDERS OF AMBULATORY, STAIR LIFTER WHEELCHAIR, AND <span style="color: #FF8F00;">STRETCHER TRANSPORTATION</span></h4></div>
-    <img src="./img/new-logo.png" alt="">
+    <img src="./img/new-logo.jpg" alt="">
     <div>With over 5 years of experience, OMBI Non-Medical Transportation specializes in non-emergency medical <span style="color: #0077B5;">stretcher transportation services</span>. Our services adhere to the highest industry standards, offering premier Non-Medical transportation solutions to the individuals. As a private non-emergency medical transportation company, we are dedicated to ensuring secure and punctual transportation for all our clients.</div>
     <div>At OMBI Non-Medical Transportation, our stretcher transport services are administered by skilled and experienced professionals who prioritize the safety and comfort of our clients. We are committed to deliver top-notch stretcher transportation services in your vicinity, including local, long-distance, and out-of-state options. For long-distance stretcher transportation, we provide a range of choices to guarantee the safe conveyance of your loved ones regardless of the distance.</div>
     <div style="height: 150px;">Stretcher transportion involves the use of stretchers or gurneys for individuals who are unable to sit up or require enhanced medical attention during transit. OMBI Non-Medical Transportation places the highest emphasis on service quality and safety to serve the best interests of all our customers.</div>
@@ -605,8 +605,8 @@ page when looking at its layout.</p>
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="footer__about">
             <div class="footer__logo">
-              <a href="/index.html"><img data-cfsrc="img/new-logo.png" alt=""
-                  style="display:none;visibility:hidden;"><noscript><img src="img/new-logo.png" alt=""></noscript></a>
+              <a href="/index.html"><img data-cfsrc="img/new-logo.jpg" alt=""
+                  style="display:none;visibility:hidden;"><noscript><img src="img/new-logo.jpg" alt=""></noscript></a>
             </div>
             <p>Our team provides accessible vehicles, serving private individuals, medical institutions, insurance
               entities, nursing homes, and assisted living facilities. With a comprehensive understanding of client
