--- a/wheel.html
+++ b/wheel.html
@@ -147,8 +147,8 @@
         </script>
         <script type="text/javascript"
           src="https://ajax.cloudflare.com/cdn-cgi/scripts/04b3eb47/cloudflare-static/mirage2.min.js"></script>
-        <img data-cfsrc="img/new-logo.png" alt="" style="display:none;visibility:hidden;"><noscript><img
-            src="img/new-logo.png" alt=""></noscript>
+        <img data-cfsrc="img/new-logo.jpg" alt="" style="display:none;visibility:hidden;"><noscript><img
+            src="img/new-logo.jpg" alt=""></noscript>
       </a>
     </div>
     <div id="mobile-menu-wrap"></div>
@@ -193,7 +193,7 @@
         <div class="row">
           <div class="col-lg-2">
             <div class="header__logo">
-              <a href="./index.html"><img data-cfsrc="img/new-logo.png" alt="" style="height: 80px;"></a>
+              <a href="./index.html"><img data-cfsrc="img/new-logo.jpg" alt="" style="height: 80px;"></a>
             </div>
           </div>
           <div class="col-lg-10" style="padding-left: 100px;">
@@ -263,7 +263,7 @@
     <p></p>
     <div style="text-align: center;"><h2>LOOKING FOR EXPERIENCED WHEELCHAIR TRANSPORTATION COMPANY NEAR YOU?</h2></div>
     <div>People who require personalized transportation assistance, are wheelchair-bound, or have unique needs rely on our wheelchair transportation services. If they are bedridden or use a wheelchair, we offer support in safely navigating stairs. While we handle the logistical details, our clients can focus on what's most important to them.</div>
-    <img src="./img/new-logo.png" alt="">
+    <img src="./img/new-logo.jpg" alt="">
     <div style="height: 350px;">We provide our services for the purposes like:<br>
       <li>Routine checkups</li>
       <li>Hospital visits</li>
@@ -614,8 +614,8 @@ page when looking at its layout.</p>
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="footer__about">
             <div class="footer__logo">
-              <a href="/index.html"><img data-cfsrc="img/new-logo.png" alt=""
-                  style="display:none;visibility:hidden;"><noscript><img src="img/new-logo.png" alt=""></noscript></a>
+              <a href="/index.html"><img data-cfsrc="img/new-logo.jpg" alt=""
+                  style="display:none;visibility:hidden;"><noscript><img src="img/new-logo.jpg" alt=""></noscript></a>
             </div>
             <p>Our team provides accessible vehicles, serving private individuals, medical institutions, insurance
               entities, nursing homes, and assisted living facilities. With a comprehensive understanding of client
