--- a/discount.html
+++ b/discount.html
@@ -137,7 +137,7 @@
       <span class="icon_search search-switch"></span>
     </div>
     <div class="offcanvas__logo">
-      <a href="./index.html"><img src="img/new-logo.png" alt=""></a>
+      <a href="./index.html"><img src="img/new-logo.jpg" alt=""></a>
     </div>
     <div id="mobile-menu-wrap"></div>
     <ul class="offcanvas__widget">
@@ -177,7 +177,7 @@
         <div class="row">
           <div class="col-lg-2">
             <div class="header__logo">
-              <a href="./index.html"><img src="img/new-logo.png" alt="" style="height: 80px;"></a>
+              <a href="./index.html"><img src="img/new-logo.jpg" alt="" style="height: 80px;"></a>
             </div>
           </div>
           <div class="col-lg-10" style="padding-left: 100px;">
@@ -266,7 +266,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="footer__about">
             <div class="footer__logo">
-              <a href="index.html"><img src="img/new-logo.png" alt=""></a>
+              <a href="index.html"><img src="img/new-logo.jpg" alt=""></a>
             </div>
             <p>Our team provides accessible vehicles, serving private individuals, medical institutions, insurance
               entities, nursing homes, and assisted living facilities. With a comprehensive understanding of client
