--- a/navbar.html
+++ b/navbar.html
@@ -28,7 +28,7 @@
                 <div class="row">
                     <div class="col-lg-2">
                         <div class="header__logo">
-                            <a href="./index.html"><img src="img/new-logo.png" alt="" style="height: 50px;"></a>
+                            <a href="./index.html"><img src="img/new-logo.jpg" alt="" style="height: 50px;"></a>
                         </div>
                     </div>
                     <div class="col-lg-10" style="padding-left: 100px;">
