--- a/testimonials.html
+++ b/testimonials.html
@@ -142,7 +142,7 @@
       <span class="icon_search search-switch"></span>
     </div>
     <div class="offcanvas__logo">
-      <a href="./index.html"><img src="img/new-logo.png" alt=""></a>
+      <a href="./index.html"><img src="img/new-logo.jpg" alt=""></a>
     </div>
     <div id="mobile-menu-wrap"></div>
     <ul class="offcanvas__widget">
@@ -182,7 +182,7 @@
         <div class="row">
           <div class="col-lg-2">
             <div class="header__logo">
-              <a href="./index.html"><img src="img/new-logo.png" alt="" style="height: 90px;"></a>
+              <a href="./index.html"><img src="img/new-logo.jpg" alt="" style="height: 90px;"></a>
             </div>
           </div>
           <div class="col-lg-10" style="padding-left: 100px;">
@@ -482,7 +482,7 @@ be a result</p>
     <div class="container">
         <div class="row">
             <div class="col">
-                <img src="img/new-logo.png" alt="">
+                <img src="img/new-logo.jpg" alt="">
             </div>
             <div class="col">
                 <h5>No better place to get you healthy again</h5>
@@ -533,7 +533,7 @@ be a result</p>
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="footer__about">
             <div class="footer__logo">
-              <a href="/index.html"><img src="img/new-logo.png" alt="" style="height: 150px;"></a>
+              <a href="/index.html"><img src="img/new-logo.jpg" alt="" style="height: 150px;"></a>
             </div>
             <p>Our team provides accessible vehicles, serving private individuals, medical institutions, insurance
               entities, nursing homes, and assisted living facilities. With a comprehensive understanding of client
